--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: WebcampsiLJ2016
+title: WebCamp Ljubljana 2016
 email: info@webcamp.si
 description: > # this means to ignore newlines until "baseurl:"
   WebCamp Ljubljana is the unconference where everyone who is building and 	designing for the web share their
   knowledge, experience, and mockups and vim configurations. It is organized 	annually-ish by	the community, for the community.
   baseurl: ""
-url: "http://2015.webcamp.si" # the base hostname & protocol for your site
+url: "http://2016.webcamp.si" # the base hostname & protocol for your site
 twitter_username: webcampsi
 github_username:  webcampsi
 facebook_username: webcamp.si
